forgot to make commits. added projects section and skills section. skills section needs work

--- a/src/components/css/projects.css
+++ b/src/components/css/projects.css
@@ -1,6 +1,17 @@
 #projects{
-    min-height:100vh;
     height:fit-content;
     padding-top:3rem;
     color:var(--text);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+#projectsContainer{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: center;
+    margin:0 auto;
+    gap:0.75rem;
 }
