--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -44,13 +44,15 @@
 }
 
 #heroDesc{
-    line-height:0rem
+    line-height:auto;
     
 }
 
 #heroButtons{
+    display:flex;
+    justify-content: center;
     font-size:1rem;
-    margin:10rem;
+    margin-top:10rem;
 }
 
 #heroButtons > a{
