--- a/src/components/css/skills.css
+++ b/src/components/css/skills.css
@@ -1,3 +1,24 @@
 #skills{
-    padding-top: 3rem;
+    padding-top: 5rem;
+}
+
+#skillsCont{
+    margin:0 auto;
+     height:fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    width:50%;
+    max-width:768px;
+    gap:30px;
+    align-items: center;
+    justify-content:space-around ;
+}
+
+.skillItem{
+    background-color: var(--bg1);
+    border-radius: var(--corner);
+    padding:1rem;
+    font-size:1.5rem;
+    width:8rem;
+    border:2px solid rgb(255, 255, 255);
 }
