--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,23 @@
   min-height:100vh;
   text-align: center;
   max-width:100vw;
-  padding:0;
+  padding-top:0;
+}
+
+#header{
+    position:fixed;
+  top:0%;
+  width:100vw;
+  height:4rem;
+  background-color: aqua;
+  z-index: 9999;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+}
+#navDiv{
+  width:50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
