--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
   top:0%;
   width:100vw;
   height:4rem;
-  background-color: aqua;
+  background-color: rgba(205, 205, 205, 0.187);
+  backdrop-filter: blur(50px);
   z-index: 9999;
   display:flex;
   justify-content: space-between;
@@ -22,4 +23,8 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+}
+
+#navDiv p a{
+  text-decoration: none;
 }
