--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,9 @@
 
   --h1:3rem;
   --h1L:0.33rem;
-  --h2:2.5rem;
+  --h2:2rem;
   --h2L:0.4rem;
-  --p:1rem/0.125rem;
+  --p:1.125rem/0.8rem;
 
   ---ptop:3rem;
 }
@@ -45,8 +45,16 @@ h1{
   font-size: var(--h1);
 }
 h2{
-  font-size: 2rem;
+  font-size: var(--h2);
 }
 p{
-  font-size: 1rem;
+  font-size: var(--p);
+}
+
+@media (width<768px){
+  :root{
+    --h1:2.75rem !important;
+    --h2:0.75rem !important;
+    --p:1rem/1rem !important;
+  }
 }
