--- a/src/components/css/about.css
+++ b/src/components/css/about.css
@@ -11,7 +11,7 @@
     border-radius: 50%;
     background-size: cover;
     overflow: hidden;
-    background-color: aqua;
+    background-color: grey;
 
 }
 
@@ -22,8 +22,8 @@
 }
 
 #aboutDescription{
+    min-width: fit-content;
     width:95%;
     max-width:1366px;
-    border:1px solid black;
     text-align: left;
 }
