--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 #root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   min-height:100vh;
   text-align: center;
   max-width:100vw;
@@ -7,13 +11,16 @@
 }
 
 #header{
-    position:fixed;
+  position:fixed;
   top:0%;
-  width:100vw;
+  left:50%;
+  transform:translateX(-50%);
+  width:100%;
+  max-width: 2560px;
   height:4rem;
   background-color: rgba(205, 205, 205, 0.187);
   backdrop-filter: blur(50px);
-  z-index: 9999;
+  z-index: 9998;
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -23,6 +30,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+
 }
 
 #navDiv p a{
@@ -45,3 +53,61 @@
   text-decoration: none;
   color:var(--text);
 }
+
+#menuButton{
+  display:none;
+}
+
+@media (width<1024px) {
+  #navDiv{
+    position:fixed;
+    display:none;
+    z-index: 9999;
+    top: 4rem;
+    width:100%;
+    height:100vh;
+    flex-direction: column;
+    justify-content: center;
+    background-color: hsla(0, 0%, 20%, 0);
+    transition: background-color 1.0s ease;
+
+    
+
+    
+  }
+  #navDiv.open{
+    display:inherit;
+    background-color:hsla(0, 0%, 20%, 0.926);;
+
+  }
+  #header{
+    justify-content: center;
+  }
+  .navLink{
+    color:whitesmoke;
+  }
+  #menuButton{
+    display:block;
+    display:inherit;
+    position:absolute;
+    left:1rem;
+    color:white;
+   
+  }
+  #skillsCont{
+    width:90%;
+  }
+}
+
+
+h1, h2, p {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease, transform 0.8s ease;
+}
+
+.fade-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
