--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -24,6 +24,7 @@
     border:none;
     margin-bottom: 1rem;
     padding:0.5rem;
+     box-shadow: 0 1px 6px var(--bd);
 
 }
 
@@ -33,4 +34,5 @@
     border: none;
     background-color: var(--bg3);
     border:1px solid hsl(42.55,44.72%,60%);
+     box-shadow: 0 1px 6px var(--bd);
 }
