--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,12 +1,15 @@
 @font-face {
     font-family: TheSignature;
-    src: url(/src/fonts/Thesignature.otf);
-    src:url(/src/fonts/Thesignature.ttf);
+    src: url(/src/fonts/Thesignature.woff) format('woff');
+    src: url(/src/fonts/Thesignature.otf) format('otf');
+    src:url(/src/fonts/Thesignature.ttf) format('ttf');
+    font-display: swap;
 }
 
 
 
 #home{
+    position:relative;
     width:100%;
     max-width: 100%;
     color:rgb(239, 239, 239);
@@ -26,12 +29,14 @@
 }
 
 #hero{
+    min-width:100%;
     padding-top: 8rem;
-    width:100%;
-    height:100%;
+    inset:0;
     position:absolute;
     display:flex;
     flex-direction: column;
+    justify-content: center;align-items: center;
+
     top:0%;
 }
 
@@ -49,17 +54,22 @@
 
 #heroButtons{
     display:flex;
+    flex-wrap: wrap;
     justify-content: center;
-    font-size:1rem;
-    margin-top:10rem;
+    align-items: center;
+    font-size:var(--p);
+    margin-top:2rem;
 }
 
 #heroButtons > a{
-    margin: 2rem;
+    margin: 1rem;
 }
 
 #heroButtons button{
     width:10rem;
     padding:1rem 2rem;
     border-radius: var(--corner);
+     border:1px solid hsl(42.55,44.72%,60%);
+    background-color: var(--bg3);
+    margin:0;
 }
