--- a/src/components/css/skills.css
+++ b/src/components/css/skills.css
@@ -1,6 +1,6 @@
 #skills{
     padding-top: 5rem;
-    height:100vh;
+    min-height:100vh;
 }
 
 #skillsCont{
@@ -20,6 +20,7 @@
     border-radius: var(--corner);
     padding:1rem;
     font-size:var(--p);
-    width:8rem;
+    width:4rem;
     border:2px solid rgb(255, 255, 255);
+     box-shadow: 0 1px 6px var(--bd);
 }
