--- a/src/components/subcomponents/css/projectCard.css
+++ b/src/components/subcomponents/css/projectCard.css
@@ -4,12 +4,15 @@
     display:flex;
     flex-direction: column;
 
+    box-shadow: 0 1px 6px var(--bd);
+
     background-color: var(--bg1);
     padding:0.25rem;
     border-radius: var(--corner);
     padding:1rem 1.25rem;
     line-height: var(--p);
     justify-content: space-between;
+    color:var(--text);
 }
 .projectCard>p{
     color:var(--insignificant);
