--- a/src/components/subcomponents/css/reference.css
+++ b/src/components/subcomponents/css/reference.css
@@ -7,6 +7,7 @@
     align-items: center;
     margin:1rem;
     border-radius: var(--corner);
+    box-shadow: 0 1px 6px var(--bd);
 }
 
 .refpicCont{
