--- a/src/components/css/contact.css
+++ b/src/components/css/contact.css
@@ -36,3 +36,10 @@
     border:1px solid hsl(42.55,44.72%,60%);
      box-shadow: 0 1px 6px var(--bd);
 }
+
+#sendStatus{
+    display:none;
+}
+#sendStatus.sent{
+    display:inherit;
+}
