--- a/src/components/css/skills.css
+++ b/src/components/css/skills.css
@@ -1,6 +1,7 @@
 #skills{
     padding-top: 5rem;
     min-height:100vh;
+    border:1x solid red;
 }
 
 #skillsCont{
@@ -8,11 +9,12 @@
      height:fit-content;
     display: flex;
     flex-wrap: wrap;
-    width:50%;
+    width:100%;
     max-width:768px;
     gap:30px;
     align-items: center;
     justify-content:space-around ;
+    border:1x solid red;
 }
 
 .skillItem{
